--- a/.editorconfig
+++ b/.editorconfig
@@ -1,9 +1,9 @@
-# EditorConfig is awesome: http://EditorConfig.org
-
 root = true
 
 [*]
 end_of_line = lf
+indent_style = space
+indent_size = 2
 insert_final_newline = true
 trim_trailing_whitespace = true
 
@@ -11,18 +11,6 @@ trim_trailing_whitespace = true
 indent_style = tab
 indent_size = 4
 
-[*.js]
-indent_style = space
-indent_size = 2
-
-[*.css]
-indent_style = space
-indent_size = 2
-
-[*.json]
-indent_style = space
-indent_size = 2
-
-[*.md]
+[*.{markdown,md,mdown,txt}]
 indent_size = 4
 trim_trailing_whitespace = false
