--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,47 @@
+# Builds
+/build
+/docs
+
+# Numerous always-ignore extensions
+*.diff
+*.err
+*.orig
+*.log
+*.rej
+*.swo
+*.swp
+*.vi
+*~
+*.sass-cache
+
+# OS or Editor folders
+.DS_Store
+Thumbs.db
+.cache
+.project
+.settings
+.tmproj
+*.esproj
+nbproject
+*.sublime-project
+*.sublime-workspace
+
+# Dreamweaver added files
+_notes
+dwsync.xml
+
+# Komodo
+*.komodoproject
+.komodotools
+
+# Package management
+node_modules/
 vendor/
 
-# jetbrains
-.idea/
-.idea_modules/
-*.ipr
-*.iws
-*.iml
-atlassian-ide-plugin.xml
-com_crashlytics_export_strings.xml
-
-# vim
-[._]*.s[a-w][a-z]
-[._]s[a-w][a-z]
-*.un~
-Session.vim
-.netrwhist
-*~
-
-# sublime text
-*.sublime-workspace
-*.sublime-project
-
-# system files
-.DS_Store
-._*
-.AppleDouble
-.LSOverride
-.Spotlight-V100
-.Trashes
-*.bak
-*.swp
-*.orig
-Thumbs.db
-
-# vcs
+# Folders to ignore
+.hg
 .svn
-.cvs
+.CVS
+intermediate
+.idea
+cache
